; ModuleID = '/home/carl/AnghaBench/qmk_firmware/quantum/process_keycode/extr_process_dynamic_macro.c_dynamic_macro_play.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/quantum/process_keycode/extr_process_dynamic_macro.c_dynamic_macro_play.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [33 x i8] c"dynamic macro: slot %d playback\0A\00", align 1
@layer_state = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dynamic_macro_play(i32* %0, i32* %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = call i32 (...) @DYNAMIC_MACRO_CURRENT_SLOT()
  %9 = call i32 @dprintf(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i32 %8)
  %10 = load i32, i32* @layer_state, align 4
  store i32 %10, i32* %7, align 4
  %11 = call i32 (...) @clear_keyboard()
  %12 = call i32 (...) @layer_clear()
  br label %13

13:                                               ; preds = %17, %3
  %14 = load i32*, i32** %4, align 8
  %15 = load i32*, i32** %5, align 8
  %16 = icmp ne i32* %14, %15
  br i1 %16, label %17, label %23

17:                                               ; preds = %13
  %18 = load i32*, i32** %4, align 8
  %19 = call i32 @process_record(i32* %18)
  %20 = load i64, i64* %6, align 8
  %21 = load i32*, i32** %4, align 8
  %22 = getelementptr inbounds i32, i32* %21, i64 %20
  store i32* %22, i32** %4, align 8
  br label %13

23:                                               ; preds = %13
  %24 = call i32 (...) @clear_keyboard()
  %25 = load i32, i32* %7, align 4
  store i32 %25, i32* @layer_state, align 4
  %26 = load i64, i64* %6, align 8
  %27 = call i32 @dynamic_macro_play_user(i64 %26)
  ret void
}

declare dso_local i32 @dprintf(i8*, i32) #1

declare dso_local i32 @DYNAMIC_MACRO_CURRENT_SLOT(...) #1

declare dso_local i32 @clear_keyboard(...) #1

declare dso_local i32 @layer_clear(...) #1

declare dso_local i32 @process_record(i32*) #1

declare dso_local i32 @dynamic_macro_play_user(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
